--- a/release_info.json
+++ b/release_info.json
@@ -1,5 +1,5 @@
 {
-  "project_name": "mainsail",
-  "project_owner": "mainsail-crew",
+  "project_name": "guppyscreen",
+  "project_owner": "guppyscreen",
   "version": "v2.5.1"
 }
